gccida/c0/cselib_finish
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_finish/src/cselib.c:1897:14: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_delete( hash_table_0); 
             ^~~~~~~~~~~~
             hash_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_finish/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_finish/src/obj/cselib.o] Error 1
